--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2026 AST // ASK INTELLIGENCE • ALL SYSTEMS OPERATIONAL</p>
+        <p>&copy; 2026 ASK INTELLIGENCE ASK<sup>2</sup> Organisation • ALL SYSTEMS OPERATIONAL </p>
     </footer>
 
     <script>
@@ -647,7 +647,7 @@
             const ws = XLSX.utils.json_to_sheet(registryData);
             const wb = XLSX.utils.book_new();
             XLSX.utils.book_append_sheet(wb, ws, "Master_Analytics");
-            XLSX.writeFile(wb, "AST_Master_Intelligence_Report.xlsx");
+            XLSX.writeFile(wb, "ASK_Master_Intelligence_Report.xlsx");
         }
     </script>
 </body>
